// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.repo.test.sh given: [case1] lint passes when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what lint
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (1s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test.sh given: [case2] lint fails when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ ✋ failed (0s)
   ├─ defects: 3
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log
   └─ tip: try \`npm run fix\` then rerun, or Read the log path above for details
"
`;

exports[`git.repo.test.sh given: [case3] npm error (malfunction) when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ 💥 malfunction (0s)
   └─ log: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log

npm command failed. check the log for details.
npm ERR! command not found
"
`;

exports[`git.repo.test.sh given: [case4] no package.json when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   └─ error: no package.json found

this skill requires a node.js project with package.json
"
`;

exports[`git.repo.test.sh given: [case7] argument validation when: [t0] --what is omitted then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test
   └─ error: --what is required

usage: git.repo.test.sh --what <lint|unit|integration|acceptance|all>
"
`;

exports[`git.repo.test.sh given: [case7] argument validation when: [t1] --what has unsupported value then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what foobar
   └─ error: invalid --what value 'foobar'

valid values: types | format | lint | unit | integration | acceptance | all
example: --what types,lint,unit
"
`;

exports[`git.repo.test.sh given: [case8] not in git repo when: [t0] run outside any git repo then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   └─ error: not in a git repository
"
`;

exports[`git.repo.test.sh given: [case9] no test:lint script in package.json when: [t0] \`rhx git.repo.test --what lint\` is run (default) then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   ├─ status: constraint
   └─ error: no 'test:lint' command in package.json

hint: ehmpathy convention uses 'test:lint', 'test:unit', 'test:integration', 'test:acceptance'
"
`;

exports[`git.repo.test.sh given: [case10] lint exits with non-zero (warnings or errors) when: [t0] lint exits with code 1 then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ ✋ failed (1s)
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log
   └─ tip: try \`npm run fix\` then rerun, or Read the log path above for details
"
`;

exports[`git.repo.test.sh given: [case11] types passes when: [t0] \`rhx git.repo.test --what types\` is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what types
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test.sh given: [case12] types fails when: [t0] \`rhx git.repo.test --what types\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what types
   │  └─ ✋ failed (0s)
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=types/ISOTIME.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=types/ISOTIME.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test.sh given: [case13] format passes when: [t0] \`rhx git.repo.test --what format\` is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what format
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (1s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test.sh given: [case14] format fails when: [t0] \`rhx git.repo.test --what format\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what format
   │  └─ ✋ failed (1s)
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=format/ISOTIME.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=format/ISOTIME.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test.sh given: [case17] comma-separated --what values when: [t0] \`rhx git.repo.test --what types,format\` is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what types
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (1s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired

🐚 git.repo.test --what format
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired

"
`;

exports[`git.repo.test.sh given: [case19] --scope matches 0 files when: [t0] \`rhx git.repo.test --what unit --scope nonexistent-pattern-xyz\` is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope nonexistent-pattern-xyz-12345
   ├─ scope: nonexistent-pattern-xyz-12345
   │  └─ matched: 0 files
   ├─ status: constraint
   └─ error: no tests matched scope 'nonexistent-pattern-xyz-12345'

hint: check the scope pattern or run without --scope to see all tests
"
`;

exports[`git.repo.test.sh given: [case19] --scope matches 0 files when: [t0] \`rhx git.repo.test --what unit --scope nonexistent-pattern-xyz\` is run then: output matches snapshot 2`] = `
"   ├─ status: constraint
   └─ error: no tests matched scope 'nonexistent-pattern-xyz-12345'

hint: check the scope pattern or run without --scope to see all tests
"
`;

exports[`git.repo.test.sh given: [case21] jest config file absent when: [t0] \`rhx git.repo.test --what unit\` is run without jest.unit.config.ts then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what unit
   ├─ status: constraint
   └─ error: jest.unit.config.ts not found

hint: create jest.unit.config.ts for unit tests
      ehmpathy convention uses jest.{unit,integration,acceptance}.config.ts
"
`;

exports[`git.repo.test.sh given: [case22] --timeout flag when: [t0] \`rhx git.repo.test --what lint --timeout 1\` with slow command then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what lint
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ ⏱️ timeout (2s)
   ├─ status: malfunction
   ├─ error: test exceeded 1s timeout
   └─ log
      ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stdout.log
      └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log

hint: increase --timeout or check for slow tests
"
`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t0] \`rhx git.repo.test --what unit --scope cpsafe\` is run then: stderr matches snapshot 1`] = `""`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t0] \`rhx git.repo.test --what unit --scope cpsafe\` is run then: stdout matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope cpsafe
   ├─ scope: cpsafe
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (2s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 2s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t1] \`rhx git.repo.test --what unit --scope other\` is run then: stderr matches snapshot 1`] = `""`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t1] \`rhx git.repo.test --what unit --scope other\` is run then: stdout matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope other
   ├─ scope: other
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (2s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 2s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t2] \`rhx git.repo.test --what unit --scope xyz\` is run then: stderr matches snapshot 1`] = `
"   ├─ status: constraint
   └─ error: no tests matched scope 'nonexistent-xyz'

hint: check the scope pattern or run without --scope to see all tests
"
`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t2] \`rhx git.repo.test --what unit --scope xyz\` is run then: stdout matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope nonexistent-xyz
   ├─ scope: nonexistent-xyz
   │  └─ matched: 0 files
   ├─ status: constraint
   └─ error: no tests matched scope 'nonexistent-xyz'

hint: check the scope pattern or run without --scope to see all tests
"
`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t3] unit config only matches unit test files, not integration files then: stderr matches snapshot 1`] = `""`;

exports[`git.repo.test.sh given: [case23] --scope filtering with jest configs when: [t3] unit config only matches unit test files, not integration files then: stdout matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope myfeature
   ├─ scope: myfeature
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (2s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 2s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;
